# intern_assessment_llmda

./: .gitignore  README.md  next_word_predictor.py  pyproject.toml  vocabulary.pkl
