[tool.poetry]
name = "next-word-predictor"
version = "0.1.0"
description = "LSTM-based next-word prediction model for text generation"
authors = ["Urja Gathoo <urjagathoo@ucla.edu>"]
readme = "README.md"
packages = [{include = "next_word_predictor"}]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.13.0"
numpy = "^1.21.0"
requests = "^2.28.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
jupyter = "^1.0.0"
black = "^22.0.0"
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"